data/collection/fixes/descriptions/java/JDK-8236841
record Test(int x) {
  public Test {
    x++;
  }
}

> "C:\Program Files\Java\jdk-14\bin\javac.exe" --enable-preview --release=14 Test.java
Test.java:3: error: final parameter x may not be assigned
    x++;
    ^
Note: Test.java uses preview language features.
Note: Recompile with -Xlint:preview for details.
1 error

reported by Tagir at amber-dev: http://mail.openjdk.java.net/pipermail/amber-dev/2020-January/005470.html